fix: correct education block

--- a/index.html
+++ b/index.html
@@ -115,13 +115,13 @@ function isPrime(num) {
             </div>
             <div class="content">
                 <ul>
-                    <li><span class="educitem">University:</span> Brest State University them. A.S. Pushkin,
+                    <li>Brest State University named after A. Pushkin,
                         jurisprudence</li>
-                    <li><span class="educitem">Courses:</span>
+                    <li>Courses:
                         <ul class="ullist">
                             <li>CS50 lectures</li>
                             <li>ITEA</li>
-                            <li>RS Schools Course «JavaScript/Front-end. Stage 0» (in progress)</li>
+                            <li>RS Schools Course «JavaScript/Front-end» (in progress)</li>
                         </ul>
                     </li>
                 </ul>
