--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
         </div>
         <nav class="links">
             <ul>
-                <li><a href="#contact">Contact</a></li>
                 <li><a href="#education">Education</a></li>
-                <li><a href="#about">About Me</a></li>
                 <li><a href="#skills">Skills</a></li>
                 <li><a href="#languages">Languages</a></li>
+                <li><a href="#about">About Me</a></li>
+                <li><a href="#experience">Experience</a></li>
                 <li><a href="#code">Code Example</a></li>
             </ul>
         </nav>
@@ -50,38 +50,21 @@
                     information technology.
                 </p>
             </div>
-            <div id="skills">
-                <h2>Skills</h2>
-            </div>
-            <div class="content">
-                <ul>
-                    <li>HTML5, CSS3</li>
-                    <li>JavaScript (basics)</li>
-                    <li>Python (basics)</li>
-                    <li>VS Code</li>
-                    <li>Jira</li>
-                    <li>Git, GitHub</li>
-                    <li>CMS Wordpress</li>
-                    <li>MySQL</li>
-                    <li>Devtools</li>
-                    <li>Charles Proxy, Fiddler, PICT</li>
-                    <li>Postman, SoapUI (basics)</li>
-                </ul>
-            </div>
-            <div id="languages">
-                <h2>Languages</h2>
+            <div id="experience">
+                <h2>Experience</h2>
             </div>    
             <div class="content">
                 <ul>
-                    <li>English:
-                        <ul class="ullist">
-                            <li>A2: 
-                                <p><img src="./img/EFSETscreen.png" alt="EF SET: A2 Elementary"></p>
-                            </li>
-                        </ul>
-                    </li>
-                    <li>Franch: B1</li>
-                    <li>Russian: native</li>
+                    <li>Layot Figma:
+                        <p><img src="./img/exam1.png" class="exam" alt="Figma"></img></p></li>
+                </ul>
+                <ul>
+                    <li>Audioplayer:
+                        <p><img src="./img/exam2.png" class="exam" alt="Audioplayer"></img></p></li>
+                </ul>
+                <ul>
+                    <li>Tic-tac-toe:
+                        <p><img src="./img/exam3.png" class="exam" alt="Tic-tac-toe"></img></p></li>
                 </ul>
             </div>
             <div id="code">
@@ -126,10 +109,38 @@ function isPrime(num) {
                     </li>
                 </ul>
             </div>
-            <h2>Experience</h2>
+            <div id="skills">
+                <h2>Skills</h2>
+            </div>
             <div class="content">
                 <ul>
-                    <li><a href="https://github.com/atcherdsd/rsschool-cv/tree/main">My CV.</a></li>
+                    <li>HTML5, CSS3</li>
+                    <li>JavaScript (basics)</li>
+                    <li>Python (basics)</li>
+                    <li>VS Code</li>
+                    <li>Jira</li>
+                    <li>Git, GitHub</li>
+                    <li>CMS Wordpress</li>
+                    <li>MySQL</li>
+                    <li>Devtools</li>
+                    <li>Charles Proxy, Fiddler, PICT</li>
+                    <li>Postman, SoapUI (basics)</li>
+                </ul>
+            </div>
+            <div id="languages">
+                <h2>Languages</h2>
+            </div>    
+            <div class="content">
+                <ul>
+                    <li>English:
+                        <ul class="ullist">
+                            <li>A2: 
+                                <p><img src="./img/EFSETscreen.png" class="efset" alt="EF SET: A2 Elementary"></p>
+                            </li>
+                        </ul>
+                    </li>
+                    <li>Franch: B1</li>
+                    <li>Russian: native</li>
                 </ul>
             </div>
         </aside>
