--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
         </div>
         <nav class="links">
             <ul>
+                <li><a href="#contact">Contact</a></li>
                 <li><a href="#education">Education</a></li>
                 <li><a href="#skills">Skills</a></li>
                 <li><a href="#languages">Languages</a></li>
-                <li><a href="#about">About Me</a></li>
                 <li><a href="#experience">Experience</a></li>
                 <li><a href="#code">Code Example</a></li>
             </ul>
@@ -73,10 +73,10 @@
             <div class="codeback">
                 <pre>
 function isPrime(num) {
-    if (num < 2) return false;
-    for (let i = 2; i < (Math.sqrt(num - 1) + 1); i++)
-        if (num % i === 0) return false;
-    return true;
+   if (num < 2) return false;
+   for (let i = 2; i < (Math.sqrt(num - 1) + 1); i++)
+      if (num % i === 0) return false;
+      return true;
 }
                 </pre>
             </div>
