feat: add projects

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Siarhei Charniak">
     <title>Resume S.Charniak</title>
+    <link rel="icon" href="./img/fav.ico">
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
@@ -56,15 +57,27 @@
             <div class="content">
                 <ul>
                     <li>Layot Figma:
-                        <p><img src="./img/exam1.png" class="exam" alt="Figma"></img></p></li>
+                        <div class="figma">
+                            <p><a href="https://rolling-scopes-school.github.io/atcherdsd-JSFEPRESCHOOL/portfolio/" target="_blank"><img src="./img/exam1.png" class="exam" alt="Portfolio"></img></a></p>
+                            <p><a href="https://rolling-scopes-school.github.io/atcherdsd-JSFE2022Q1/shelter/pages/main/" target="_blank"><img src="./img/Cozy_House.png" class="exam" alt="Cozy House"></img></a></p>
+                        </div>
+                    </li>
                 </ul>
                 <ul>
                     <li>Audioplayer:
-                        <p><img src="./img/exam2.png" class="exam" alt="Audioplayer"></img></p></li>
+                        <p><a href="https://rolling-scopes-school.github.io/atcherdsd-JSFEPRESCHOOL/portfolio/eco-sounds/" target="_blank"><img src="./img/exam2.png" class="exam" alt="Audioplayer"></img></a></p></li>
                 </ul>
                 <ul>
                     <li>Tic-tac-toe:
-                        <p><img src="./img/exam3.png" class="exam" alt="Tic-tac-toe"></img></p></li>
+                        <p><a href="https://rolling-scopes-school.github.io/atcherdsd-JSFEPRESCHOOL/portfolio/tic-tac-toe/" target="_blank"><img src="./img/exam3.png" class="exam" alt="Tic-tac-toe"></a></img></p></li>
+                </ul>
+                <ul>
+                    <li>CSS Slider:
+                        <p><a href="https://atcherdsd.github.io/cssMemSlider/cssMemSlider/" target="_blank"><img src="./img/CSS_Slider.png" class="exam" alt="CSS Slider"></a></img></p></li>
+                </ul>
+                <ul>
+                    <li>App usign BEM:
+                        <p><a href="https://atcherdsd.github.io/clean-code-s1e1/" target="_blank"><img src="./img/App_TODO.png" class="exam" alt="Clean code (BEM)"></a></img></p></li>
                 </ul>
             </div>
             <div id="code">
