fix: correct mistake

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                         <p><a href="https://atcherdsd.github.io/cssMemSlider/cssMemSlider/" target="_blank"><img src="./img/CSS_Slider.png" class="exam" alt="CSS Slider"></a></img></p></li>
                 </ul>
                 <ul>
-                    <li>App usign BEM:
+                    <li>App using BEM:
                         <p><a href="https://atcherdsd.github.io/clean-code-s1e1/" target="_blank"><img src="./img/App_TODO.png" class="exam" alt="Clean code (BEM)"></a></img></p></li>
                 </ul>
             </div>
