feat: change skills list

--- a/index.html
+++ b/index.html
@@ -127,16 +127,17 @@ function isPrime(num) {
             </div>
             <div class="content">
                 <ul>
-                    <li>HTML5, CSS3</li>
-                    <li>JavaScript (basics)</li>
-                    <li>Python (basics)</li>
-                    <li>VS Code</li>
-                    <li>Jira</li>
+                    <li>JS, Node.js (basics)</li>
+                    <li>HTML & CSS (SCSS)</li>
+                    <li>Flexbox, Grid</li>
+                    <li>Figma</li>
+                    <li>Webpack</li>
                     <li>Git, GitHub</li>
                     <li>CMS Wordpress</li>
                     <li>MySQL</li>
-                    <li>Devtools</li>
-                    <li>Charles Proxy, Fiddler, PICT</li>
+                    <li>VS Code, Devtools</li>
+                    <li>Jira</li>
+                    <li>Charles Proxy, Fiddler</li>
                     <li>Postman, SoapUI (basics)</li>
                 </ul>
             </div>
