feat: add info october 2022

--- a/index.html
+++ b/index.html
@@ -58,28 +58,50 @@
                 <ul>
                     <li>Layot Figma:
                         <div class="figma">
-                            <p><a href="https://rolling-scopes-school.github.io/atcherdsd-JSFEPRESCHOOL/portfolio/" target="_blank"><img src="./img/exam1.png" class="exam" alt="Portfolio"></img></a></p>
-                            <p><a href="https://rolling-scopes-school.github.io/atcherdsd-JSFE2022Q1/shelter/pages/main/" target="_blank"><img src="./img/Cozy_House.png" class="exam" alt="Cozy House"></img></a></p>
+                            <p><a href="https://rolling-scopes-school.github.io/atcherdsd-JSFEPRESCHOOL/portfolio/" 
+                                target="_blank"><img src="./img/exam1.png" class="exam" alt="Portfolio"></img></a>
+                            </p>
+                            <p><a href="https://rolling-scopes-school.github.io/atcherdsd-JSFE2022Q1/shelter/pages/main/" 
+                                target="_blank"><img src="./img/Cozy_House.png" class="exam" alt="Cozy House"></img></a>
+                            </p>
                         </div>
                     </li>
                 </ul>
                 <ul>
                     <li>Audioplayer:
-                        <p><a href="https://rolling-scopes-school.github.io/atcherdsd-JSFEPRESCHOOL/portfolio/eco-sounds/" target="_blank"><img src="./img/exam2.png" class="exam" alt="Audioplayer"></img></a></p></li>
+                        <p><a href="https://rolling-scopes-school.github.io/atcherdsd-JSFEPRESCHOOL/portfolio/eco-sounds/" 
+                            target="_blank"><img src="./img/exam2.png" class="exam" alt="Audioplayer"></img></a>
+                        </p></li>
                 </ul>
                 <ul>
                     <li>Tic-tac-toe:
-                        <p><a href="https://rolling-scopes-school.github.io/atcherdsd-JSFEPRESCHOOL/portfolio/tic-tac-toe/" target="_blank"><img src="./img/exam3.png" class="exam" alt="Tic-tac-toe"></a></img></p></li>
+                        <p><a href="https://rolling-scopes-school.github.io/atcherdsd-JSFEPRESCHOOL/portfolio/tic-tac-toe/" 
+                            target="_blank"><img src="./img/exam3.png" class="exam" alt="Tic-tac-toe"></img></a>
+                        </p></li>
                 </ul>
                 <ul>
                     <li>CSS Slider:
-                        <p><a href="https://atcherdsd.github.io/cssMemSlider/cssMemSlider/" target="_blank"><img src="./img/CSS_Slider.png" class="exam" alt="CSS Slider"></a></img></p></li>
+                        <p><a href="https://atcherdsd.github.io/cssMemSlider/cssMemSlider/" 
+                            target="_blank"><img src="./img/CSS_Slider.png" class="exam" alt="CSS Slider"></img></a>
+                        </p></li>
                 </ul>
                 <ul>
                     <li>App using BEM:
-                        <p><a href="https://atcherdsd.github.io/clean-code-s1e1/" target="_blank"><img src="./img/App_TODO.png" class="exam" alt="Clean code (BEM)"></a></img></p></li>
+                        <p><a href="https://atcherdsd.github.io/clean-code-s1e1/" 
+                            target="_blank"><img src="./img/App_TODO.png" class="exam" alt="Clean code (BEM)"></img></a>
+                        </p></li>
                 </ul>
+                <ul>
+                    <li>App with TypeScript (created by the team):
+                        <p><a href="https://rslang-alexpalx.netlify.app/" 
+                            target="_blank"><img src="./img/RS-Lang.png" class="exam" alt="App with TypeScript"></img></a>
+                        </p></li>
+                </ul>
+                
             </div>
+            <ul class="link-github__wrapper">
+                <li><a class="link-github" href="https://atcherdsd.github.io/" target="_blank">and more...</a></li>
+            </ul>
             <div id="code">
                 <h2>Code Example</h2>
             </div>
@@ -104,6 +126,7 @@ function isPrime(num) {
                     <li><span class="contactitem">Email:</span> tchernak.csg@gmail.com</li>
                     <li><span class="contactitem">Telegram:</span> @Avatar9779</li>
                     <li><span class="contactitem">Discord:</span> Serge(@atcherdsd)</li>
+                    <li ><a class="link-github" href="https://github.com/atcherdsd" target="_blank"><span class="contactitem">GitHub:</span> atcherdsd</a></li>
                 </ul>
             </div>
             <div id="education">
@@ -116,8 +139,9 @@ function isPrime(num) {
                     <li>Courses:
                         <ul class="ullist">
                             <li>CS50 lectures</li>
-                            <li>ITEA</li>
-                            <li>RS Schools Course «JavaScript/Front-end» (in progress)</li>
+                            <li>ITEA (2021)</li>
+                            <li>RS Schools Course «JavaScript/Front-end» (2022)</li>
+                            <li>RS Schools Course «React» (in progress)</li>
                         </ul>
                     </li>
                 </ul>
@@ -127,8 +151,10 @@ function isPrime(num) {
             </div>
             <div class="content">
                 <ul>
-                    <li>JS, Node.js (basics)</li>
-                    <li>HTML & CSS (SCSS)</li>
+                    <li>JS, TypeScript, React</li>
+                    <li>React Testing Library, Jest</li>
+                    <li>Node.js (basics)</li>
+                    <li>HTML & CSS, SCSS</li>
                     <li>Flexbox, Grid</li>
                     <li>Figma</li>
                     <li>Webpack</li>
@@ -136,7 +162,7 @@ function isPrime(num) {
                     <li>CMS Wordpress</li>
                     <li>MySQL</li>
                     <li>VS Code, Devtools</li>
-                    <li>Jira</li>
+                    <li>Jira; Agile, Scrum/li>
                     <li>Charles Proxy, Fiddler</li>
                     <li>Postman, SoapUI (basics)</li>
                 </ul>
@@ -148,8 +174,11 @@ function isPrime(num) {
                 <ul>
                     <li>English:
                         <ul class="ullist">
-                            <li>A2: 
-                                <p><img src="./img/EFSETscreen.png" class="efset" alt="EF SET: A2 Elementary"></p>
+                            <li>B2: 
+                                <p>
+                                    <a href="https://drive.google.com/file/d/1nCXHq7Ui6QcBCeGHQKVB6YK557rsrpyb/view?usp=sharing"
+                                    target="_blank"><img src="./img/EF SET Certificate-1.png" class="efset" alt="EF SET: B2"></a>
+                                </p>
                             </li>
                         </ul>
                     </li>
